force-app/main/default/objects/OperatorBusTypeSeat__c/OperatorBusTypeSeat__c.object-meta.xml
<CustomObject>
    <label>OperatorBusTypeSeat</label>
    <nameField>
        <displayFormat>OBTC-{000}</displayFormat>
        <label>OperatorBusTypeSeats Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OperatorBusTypeSeats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>