force-app/main/default/objects/OperatorBusTypeSeat__c/fields/Deck__c.field-meta.xml
<CustomField>
    <fullName>Deck__c</fullName>
    <label>Deck</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lower</fullName>
            </value>
            <value>
                <fullName>Upper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>