force-app/main/default/objects/OperatorBusTypeSeat__c/fields/OperatorBusType__c.field-meta.xml
<CustomField>
    <fullName>OperatorBusType__c</fullName>
    <label>OperatorBusType</label>
    <referenceTo>OperatorBusType__c</referenceTo>
    <relationshipLabel>OperatorBusTypeSeats</relationshipLabel>
    <relationshipName>OperatorBusTypeSeats</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>