force-app/main/default/objects/OperatorBusTypeSeat__c/fields/RowPosition__c.field-meta.xml
<CustomField>
    <fullName>RowPosition__c</fullName>
    <label>RowPosition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>