force-app/main/default/objects/OperatorBusTypeSeat__c/fields/SeatNumber__c.field-meta.xml
<CustomField>
    <fullName>SeatNumber__c</fullName>
    <label>SeatNumber</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>