force-app/main/default/objects/OperatorBusTypeSeat__c/fields/SeatType__c.field-meta.xml
<CustomField>
    <fullName>SeatType__c</fullName>
    <label>SeatType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sleeper</fullName>
            </value>
            <value>
                <fullName>Sitting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>